--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,6 +4,7 @@ metadata:
   name: demo_project
   annotations:
     github.com/project-slug: swatigarg93/demo_project
+  description: This is a demo project
 spec:
   type: Java
   lifecycle: Production
